[package]
name = "island"
version = "0.1.0"
edition = "2021"
authors = [ "hcasten <huntercasten@icloud.com>" ]

[lints.rust]
non_snake_case = "allow"
unsafe_code = "forbid"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.3.4", features=['http', 'axum'] }
worker-macros = { version="0.3.4", features=['http'] }
axum  = { version = "0.7", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
leptos = { version = "0.7.0-beta4", features = ["csr", "experimental-islands", "nightly", "tracing"] }
